# Study_project

./: .gitignore  Dockerfile  Jenkinsfile  __init__.py  clean.sh  db.py  deploy.sh  docker-compose.yml  main.py  remove.sh  requirements.txt  rsa_key.txt  service.db
Web_app/: Dockerfile  change_pass.html  create.html  customer.html  customers.html  dashboard.html  edit_customer.html  edit_request.html  employee.html  employees.html  index.html  login.html  logout.html  request.html  requests.html  temp_login.html  test.html  test.php  test_api.html
Web_app/assets/: nav.html
Web_app/assets/css/: jquery-ui.css  style.css
Web_app/assets/js/: api_endpoint.js  const_settings.js  create_script.js  datepicker.js  jquery-ui.js  jsSHA.js  login_handle.js  manage_script.js  script.js  searchEngine.js
Web_app/src/: App.tsx  config.ts
Web_app_old/: customer.html  customers.html  edit_customer.html  edit_employee.html  employee.html  employees.html  index.html  login.html  logout.html  request.html  requests.html
Web_app_old/assets/: nav.html
Web_app_old/assets/css/: style.css
Web_app_old/assets/font/: roboto.css
Web_app_old/assets/js/: const_settings.js  create_script.js  datepicker.js  script.js
api/: Dockerfile  datamodels.py  login.py  pyproject.toml
api/service_management_system/: __init__.py  __main__.py  api.py  api_datamodels.py  auth.py  database.py  login.py  utils.py
database/: Dockerfile  init.sql
web_app/: Dockerfile  package-lock.json  package.json
web_app/src/: App.tsx
web_app/src/components/CustomerDashboard/: CustomerDashboard.tsx
(+2 files in other folders)
